--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       chatArea.scrollTop = chatArea.scrollHeight;
       
       try {
-        const response = await fetch('https://shia-faq-chatbot-production.up.railway.app/', {
+        const response = await fetch('https://shia-faq-chatbot-production.up.railway.app/ask', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ question })
